--- a/k8s-gke/deployment/k8s-cloud-api.yml
+++ b/k8s-gke/deployment/k8s-cloud-api.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: api
-          image: ${REGION}-docker.pkg.dev/${PROJECT_ID}/${ARTIFACT_REPOSITORY}/api_service:latest
+          image: ${REGION}-docker.pkg.dev/${PROJECT_ID}/${ARTIFACT_REPOSITORY}/api_service:${GITHUB_SHA}
           ports:
             - containerPort: 8000
           resources:
