--- a/k8s-gke/argoWorkflow/job-test-cloud.yaml
+++ b/k8s-gke/argoWorkflow/job-test-cloud.yaml
@@ -13,6 +13,7 @@ spec:
   podSpecPatch: |
     imagePullSecrets:
       - name: gcr-json-key-gke-argo
+    imagePullPolicy: Always
 
   templates:
     - name: pipeline
