--- a/k8s-gke/deployment/k8s-cloud-ui.yml
+++ b/k8s-gke/deployment/k8s-cloud-ui.yml
@@ -15,7 +15,8 @@ spec:
     spec:
       containers:
       - name: ui
-        image: ${REGION}-docker.pkg.dev/${PROJECT_ID}/${ARTIFACT_REPOSITORY}/ui_service:${GITHUB_SHA}
+        image: ${REGION}-docker.pkg.dev/${PROJECT_ID}/${ARTIFACT_REPOSITORY}/ui_service:latest
+        imagePullPolicy: Always
         resources:
           requests:
             memory: "128Mi"
