--- a/k8s-gke/argoWorkflow/job-test-cloud.yaml
+++ b/k8s-gke/argoWorkflow/job-test-cloud.yaml
@@ -25,7 +25,7 @@ spec:
 
     - name: preprocess
       container:
-        image: ${REGION}-docker.pkg.dev/${PROJECT_ID}/${ARTIFACT_REPOSITORY}/preprocessing_service:latest
+        image: ${REGION}-docker.pkg.dev/${PROJECT_ID}/${ARTIFACT_REPOSITORY}/preprocessing_service:${GITHUB_SHA}
         command: ["python"]
         args: ["preprocessing.py"]
         volumeMounts:
@@ -45,7 +45,7 @@ spec:
 
     - name: compute
       container:
-        image: ${REGION}-docker.pkg.dev/${PROJECT_ID}/${ARTIFACT_REPOSITORY}/recommender_service:latest
+        image: ${REGION}-docker.pkg.dev/${PROJECT_ID}/${ARTIFACT_REPOSITORY}/recommender_service:${GITHUB_SHA}
         command: ["python"]
         args: ["recommender.py"]
         volumeMounts:
