--- a/k8s-gke/deployment/k8s-cloud-api.yml
+++ b/k8s-gke/deployment/k8s-cloud-api.yml
@@ -16,6 +16,7 @@ spec:
       containers:
         - name: api
           image: ${REGION}-docker.pkg.dev/${PROJECT_ID}/${ARTIFACT_REPOSITORY}/api_service:${GITHUB_SHA}
+          imagePullPolicy: Always
           ports:
             - containerPort: 8000
           resources:
