--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -21,6 +21,7 @@ env:
 jobs:
   # Job per rilevare i cambiamenti
   detect-changes:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     name: Detect Service Changes
     runs-on: ubuntu-latest
     outputs:
