--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -1,7 +1,10 @@
 name: GCP Deploy Application
 
 on:
-  workflow_dispatch:
+  workflow_run:
+    workflows: ["GCP Infrastructure Provisioning"]
+    types:
+      - completed
   push:
     branches:
       - feature/google-cloud-gke
@@ -18,6 +21,7 @@ env:
 jobs:
   # Job per rilevare i cambiamenti
   detect-changes:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     name: Detect Service Changes
     runs-on: ubuntu-latest
     outputs:
