--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -8,6 +8,7 @@ on:
     paths:
       - 'api_service/**'
       - 'ui_service/**'
+      - 'k8s-gke/deployment/**'
 
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
