--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -3,6 +3,8 @@ name: GCP Infrastructure Provisioning
 on:
   workflow_dispatch:
   push:
+    branches:
+      - main
     paths:
       - 'terraform-gcp/**'
 
